infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: country-api
spec:
  selector: { app: country-api }
  ports:
    - name: http
      port: 80
      targetPort: 8081
  type: ClusterIP
